# pytest-drill-sergeant

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BOUNDARY_ANALYSIS.md  CHANGELOG.md  CURRENT_STATE.md  IGNORE_AUDIT_REPORT.md  README.md  REPORT.md  SARIF_STUBS_SUMMARY.md  STABILIZATION_PLAN.md  VSCODE_EXTENSION_GUIDE.md  check.txt  comprehensive_report.html  config_report.json  coverage_plan.md  custom_report.json  debug_file_discovery.py  drill-sergeant-config.json  justfile  noxfile.py  pyproject.toml  pytest-test.ini  pytest.ini  task_metadata.json  test_report.json
.cursor/rules/: archon.mdc  delegate.mdc  stuffit.mdc  testing-rules.mdc  work.mdc
.github/: TEST_DEPLOYMENT.md  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  ci_nox.yml  release-please.yml  release.yml  security.yml  test-release.yml  update_stats.yml
docs/: Decision-Log.md  Failure-Catalog.md  Release-Checklist.md
examples/: README.md  advanced_config_example.py  config_usage.py  pyproject.toml.example  pytest.ini.example  test_aaa_sample.py  test_dogfood.py  test_lsp_demo.py  test_mock_overspec_sample.py  test_structural_equality_sample.py
examples/sample_code/: test_clean.py  test_with_private_access.py
planning/: 01_project_overview.md  02_architecture_design.md  03_analysis_algorithms.md  04_scoring_system.md  05_persona_system.md  06_implementation_phases.md  07_technical_specifications.md  08_testing_strategy.md  09_deployment_guide.md  10_roadmap.md  IMPLEMENTATION_PLAN.md  README.md
planning/baseline/: mypy_src_tests.txt  pytest_q.txt  summary.txt
planning/conversations/: chat_1.md  chat_2.md  chat_3.md  gpt_plan.md
scripts/: clean-lsp.sh
src/pytest_drill_sergeant/: __init__.py  __main__.py  config.py  config_schema.py  models.py  plugin.py  pytest_options.py
src/pytest_drill_sergeant/cli/: __init__.py  main.py
src/pytest_drill_sergeant/core/: __init__.py  analysis_pipeline.py  analysis_result.py  cli_config.py  config.py  config_context.py  config_manager.py  config_registry.py  config_schema.py  config_validator.py  config_validator_enhanced.py  error_handler.py  file_discovery.py  logging_utils.py  models.py  profile_loader.py  rulespec.py  scoring_models.py
src/pytest_drill_sergeant/core/analyzers/: __init__.py  aaa_comment_detector.py  car_calculator.py  clone_detector.py  coverage_collector.py  coverage_signature.py  duplicate_test_detector.py  mock_overspec_detector.py  private_access_detector.py  structural_equality_detector.py
src/pytest_drill_sergeant/core/reporting/: __init__.py  json_formatter.py  output_manager.py  sarif_formatter.py  templates.py  types.py
src/pytest_drill_sergeant/core/scoring/: __init__.py  bis_calculator.py  brs_calculator.py  dynamic_bis_calculator.py  feature_extractor.py
src/pytest_drill_sergeant/lsp/: __init__.py  config.py  diagnostics.py  file_watcher.py  main.py  server.py
src/pytest_drill_sergeant/plugin/: __init__.py  analysis_storage.py  base.py  coverage_hooks.py  coverage_storage.py  discovery.py  extensibility.py  factory.py  hooks.py  internals.py  pytest_cov_integration.py
src/pytest_drill_sergeant/plugin/personas/: __init__.py  drill_sergeant.py  manager.py  models.py  snoop_dogg.py  strategy.py
src/pytest_drill_sergeant/util/: __init__.py  paths.py
src/pytest_drill_sergeant/utils/: __init__.py  helpers.py
src/pytest_drill_sergeant/validators/: __init__.py  aaa.py  base.py  error_reporter.py  file_length.py  marker.py  registry.py  return_type.py
stubs/sarif_om/: __init__.pyi
test_project/: pytest.ini
test_project/tests/: __init__.py  test_example.py  test_long_file.py  test_return_type_demo.py
tests/: __init__.py  conftest.py  constants.py
tests/integration/: __init__.py  test_bis_integration.py  test_cli_integration.py  test_config_integration.py  test_error_scenarios.py  test_plugin_config_integration.py  test_plugin_integration.py
tests/integration/coverage/: test_coverage_analysis_integration.py  test_coverage_integration.py  test_coverage_performance.py  test_coverage_performance_validation.py  test_coverage_validation.py  test_pytest_coverage_integration.py  test_real_coverage_collection.py
tests/smoke/: test_cli_smoke.py
tests/unit/: __init__.py  test_aaa_comment_detector.py  test_aaa_grammar.py  test_aaa_mode.py  test_aaa_structure.py  test_aaa_synonyms.py  test_aaa_validator.py  test_analysis_pipeline.py  test_analysis_result.py  test_analyzers_init.py  test_analyzers_module.py  test_bis_calculator.py  test_brs_calculator.py  test_cli_config.py  test_cli_main.py  test_config.py  test_config_context.py  test_config_manager.py  test_config_precedence.py  test_config_registry.py  test_config_schema.py  test_config_validator.py  test_core_init.py  test_core_init_direct.py  test_core_module.py  test_coverage_analysis.py  test_coverage_boost.py  test_coverage_config_options.py  test_coverage_storage.py  test_drill_sergeant_persona.py  test_dynamic_bis_calculator.py  test_error_handler.py  test_error_reporter.py  test_extensibility_simple.py  test_feature_extractor.py  test_file_discovery.py  test_file_length_modes.py  test_final_coverage.py  test_final_push.py  test_find_source_files_fix.py  (+46 more)
tests/unit/test_clone_detector/: test_dynamic_clone_detector.py
vscode-extension/: README.md  install.sh  package-lock.json  package.json  python-path-config.md
vscode-extension/src/: extension.ts
