[project]
name = "pytest-drill-sergeant"
version = "1.0.0-dev"
description = "A pytest plugin that acts as a drill sergeant for AI-written tests, enforcing quality standards and catching common AI coding anti-patterns with humor and personality"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jeff Richley", email = "jeffrichley@gmail.com" }
]
maintainers = [
    { name = "Jeff Richley", email = "jeffrichley@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.0",
    "coverage>=7.1.0",
    "datasketch>=1.6.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sarif-om>=1.0.4",
]
keywords = ["pytest", "testing", "quality", "ai", "linting", "drill-sergeant", "test-enforcement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/jeffrichley/pytest-drill-sergeant"
Repository = "https://github.com/jeffrichley/pytest-drill-sergeant.git"
Issues = "https://github.com/jeffrichley/pytest-drill-sergeant/issues"

[project.scripts]
drill-sergeant = "pytest_drill_sergeant.cli.main:cli"

[project.entry-points.pytest11]
drill_sergeant = "pytest_drill_sergeant.plugin.hooks"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
ci = [
    "sarif-tools>=0.1.0",
]
lsp = [
    "pygls>=1.0.0",
]
test = [
    "hypothesis>=6.136.6",
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.6.17",
    "mkdocstrings[python]>=0.30.0",
    "mike>=2.1.3",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-mermaid2-plugin>=1.2.1",
]
typecheck = [
    "mypy",
]
security = [
    "pip-audit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_drill_sergeant"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.version]
path = "src/pytest_drill_sergeant/__init__.py"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
fail_under = 20
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]
exclude = [
    "stubs",
    "examples",
    "scripts",
    "tools",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "Q",    # flake8-quotes
    "SIM",  # flake8-simplify
    "C90",  # mccabe
    "ARG",  # flake8-unused-arguments
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "PL",   # pylint
    "PERF", # perflint
    "D",    # pydocstyle
    "RUF",  # ruff-specific rules
    "A",    # flake8-builtins
    "G",    # flake8-logging-format
    "BLE",  # flake8-blind-except
    "TRY",  # tryceratops
    "EM",   # flake8-errmsg
    "PIE",  # flake8-pie
    "TCH",  # flake8-type-checking
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "PGH",  # pygrep-hooks
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PLR",  # pylint refactor
    "PLW",  # pylint warnings
    "PLE",  # pylint errors
]
ignore = [
    "E501",    # Line too long (Black handles this)
    "RUF001",  # Allow emoji characters (we love emojis! 🎉)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in __init__
    "D200",    # One-line docstring should fit on one line
    "D205",    # 1 blank line required between summary line and description
    "D400",    # First line should end with a period
    "D401",    # First line should be in imperative mood
    "D415",    # First line should end with a period, question mark, or exclamation point
    "PT013",   # Pytest import style (tests can be looser)
    "PT018",   # Assertion breakdown (tests can be looser)
    "SLF001",  # Private member access (tests can be looser)
    "TRY300",  # Try/except patterns (tests can be looser)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Any is banned in this codebase. Use concrete types or TypeVars." }

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
allow-star-arg-any = false

[tool.ruff.lint.flake8-type-checking]
# Be precise; keep the rule ON
strict = true

# Pydantic evaluates annotations at runtime; this prevents false TCH001s
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic.dataclasses.dataclass",
]

# If you use dataclasses/attrs that eval annotations:
runtime-evaluated-decorators = [
  "dataclasses.dataclass",
  "attrs.define",
  "attr.s",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
mypy_path = "stubs"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
# Basic safety
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
# Any-type restrictions
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false  # Allow decorators like @patch
disallow_any_generics = true
disallow_subclassing_any = true

# Our local untyped deps (we provide stubs)
[[tool.mypy.overrides]]
module = "sarif_om.*"
ignore_missing_imports = false

# Quarantine framework edges (tests can be looser)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_generics = false
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.xenon]
max-absolute = "B"
max-modules = "A"
max-average = "A"
exclude = ["tests", "examples", "scripts", "tools"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "build>=1.3.0",
    "mypy>=1.17.1",
    "pip-audit>=2.9.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "twine>=6.2.0",
    "validate-pyproject>=0.24.1",
    "xenon>=0.9.3",
    # Additional quality tools (previously in nox sessions)
    "vulture>=2.10.0",
    "isort>=5.13.0",
    "unimport>=0.20.0",
    "interrogate>=1.5.0",
    "pylint>=3.0.0",
    "radon>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "pipdeptree>=2.13.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
    "semgrep>=1.0.0",
]

# Example drill sergeant configuration
[tool.drill_sergeant]
# Custom marker mappings (directory_name = marker_name)
[tool.drill_sergeant.marker_mappings]
contract = "api"
smoke = "integration"
acceptance = "e2e"
benchmarks = "performance"
